# Marketing-Automation-Agency

./: .Cursorrules  .cursorrules  .env.example  .gitignore  =4.0.2  CRONOGRAMA.md  ESTRUTURA_PROJETO.md  LICENSE  README.md  assistant_snippet_A03l+ZRD61.txt  assistant_snippet_Hs2Wd4Aqxm.txt  assistant_snippet_Ik7t9FyXkK.txt  assistant_snippet_Js9I7l6+HT.txt  assistant_snippet_ky4hvYSrqP.txt  assistant_snippet_txjYhJf+AU.txt  content.py  docker-compose.monitoring.yml  docker-compose.test.yml  docker-compose.yml  install_dependencies.sh  load-test-summary.json  messaging.py  package-lock.json  package.json  project_tree.txt  prometheus.yml  pytest.ini  requirements-test.txt  requirements.txt  setup_permissions.sh  test_server.py  udo -u postgres psql -c CREATE USER aiagency WITH PASSWORD 'aiagency123' CREATEDB;
backend/: .env.example  Dockerfile  __init__.py  alembic.ini  create_monitoring_tables.py  create_sqlite_tables.py  create_tables.py  init_test_db.py  prometheus.yml  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  run.py  setup.py  start.sh
backend/alembic/: env.py
backend/alertmanager/: config.yml
backend/app/: __init__.py  dependencies.py  main.py
backend/docs/: README.md  alerts.md  metrics.md  monitoring_operations.md  openapi.yaml  performance_optimizations.md  security_best_practices.md  troubleshooting.md
backend/scripts/: check_redis.py  create_test_user.py  init_db.py  monitor_redis.py  reset_password.py  run_tests.sh  setup_db.sh  start_server.sh  verify_redis.py  wait-for-it.sh
backend/tests/: __init__.py  conftest.py  (+5 more)
(+504 files in other folders)
